refactor: dto를 레코드로 수정
- dto를 레코드로 수정
- 서비스 로직 수정
- S3 환경변수 경로 수정